<resources>
    <string name="app_name">DARA</string>
    <string name="home">Home</string>
    <string name="location_donor">Location</string>
    <string name="forum">Forum</string>
    <string name="profile">Profile</string>
    <string name="riwayat">Riwayat</string>
    <string name="add_post">Tambah Postingan</string>

    <string name="item_label">Filter</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet consectetur. Morbi enim condimentum pretium etiam nullam nisl tellus ac et. Semper ullamcorper imperdiet viverra viverra bibendum erat malesuada maecenas phasellus. Pulvinar volutpat urna id pulvinar sodales.

Tortor faucibus tristique et sed purus laoreet arcu. Vel pretium sit enim aliquam. Integer sem consectetur felis aliquam quisque venenatis quis. Venenatis vel sodales id magna posuere ullamcorper morbi quis sem. Venenatis nisl sed feugiat faucibus adipiscing vel lacus pharetra consectetur. Aliquam sit imperdiet massa elit sagittis augue tortor eget elit.

Bibendum facilisi ut habitant ipsum lectus pellentesque curabitur integer condimentum. Lorem pulvinar ligula sit nunc orci erat. At velit condimentum massa nunc imperdiet quis. Viverra quis nunc vitae amet habitant non. Risus sagittis eu euismod morbi in nunc nisl enim. Elementum t ligula sit nunc orci erat. At velit condimentum massa nunc imperdiet quis. Viverra quis nunc vitae amet habitant non. Risus sagittis eu euismod morbi in nunc nisl enim. Elementum t
    </string>
    <string name="text">
DARA merupakan sebuah aplikasi mobile android yang dapat membantu anda dalam mencari lokasi dan jadwal donor darah.\n\nCara Pakai:\n1. Login dengan Kode Donor dan Password (Catatan: Kode Donor dan Password di dapat dengan cara anda mendaftar terlebih dahulu ke kantor PMI Kota Padang).\n2. Setelah anda login anda dapat melihat informasi seperti berita terkini beserta lokasi dan jadwal donor darah. \n3. Anda juga dapat saling berbagi informasi di forum percakapan dengan pendonor lainnya. \n4. Anda juga dapat mengatur data diri anda.\n\nCara Mendaftar:\n1. Pergi ke kontor PMI Kota Padang.\n2. Isi form data untuk pendaftaran.\n3. Tunggu admin mendaftakan dan memberikan Kode Donor dan Password untuk anda Login.

    </string>

</resources>