<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btn_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/btn_location_donor"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/location_donor"/>

    <item
        android:id="@+id/btn_forum"
        android:icon="@drawable/baseline_forum_24"
        android:title="@string/forum"/>

    <item
        android:id="@+id/btn_riwayat"
        android:icon="@drawable/riwayat"
        android:title="@string/riwayat"/>

    <item
        android:id="@+id/btn_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"/>

</menu>